change java version from 21 to 20